Added new prezentation

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 
 <dd>Small introduction into CrownPeak <a href="presentation-crownpeak.html">View</a></dd>
 
+<dt>Fresh practice to make CSS more easier</dt>
+
+<dd>SASS, CSS3 animations, snippets, Responsive design and other...<a href="presentation-fresh-practice-to-make-css-more-easier.html">View</a></dd>
+
 </body>
 </html>
