--- a/presentation-fresh-practice-to-make-css-more-easier.html
+++ b/presentation-fresh-practice-to-make-css-more-easier.html
@@ -8,7 +8,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
 
-    <link href="//netdna.impressjscdn.com/impressjs/0.5.3/css/impress-demo.css" rel="stylesheet" />
+    <link href="http://netdna.impressjscdn.com/impressjs/0.5.3/css/impress-demo.css" rel="stylesheet" />
     
 </head>
 
@@ -296,7 +296,7 @@ if ("ontouchstart" in document.documentElement) {
     document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
 }
 </script>
-<script src="//netdna.impressjscdn.com/impressjs/0.5.3/js/impress.js"></script>
+<script src="http://netdna.impressjscdn.com/impressjs/0.5.3/js/impress.js"></script>
 <script>impress().init();</script>
 </body>
 </html>
