--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!-- Mobile Start -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <!-- Mobile End -->
 </head>
 <body>
@@ -11,10 +11,11 @@
 
 <p><strong>Plone/Zope</strong> Developer</p>
 
-<p><i>I'm working to make it best</i></p>
+<p><em>I'm working to make it best</em></p>
 
 <h2>Presentations</h2>
 
+<dl>
 <dt>Crown Peak</dt>
 
 <dd>Small introduction into CrownPeak <a href="presentation-crownpeak.html">View</a></dd>
@@ -22,6 +23,7 @@
 <dt>Fresh practice to make CSS more easier</dt>
 
 <dd>SASS, CSS3 animations, snippets, Responsive design and other...<a href="presentation-fresh-practice-to-make-css-more-easier.html">View</a></dd>
+</dl>
 
 </body>
 </html>
