--- a/training/index.html
+++ b/training/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
     <a href="requirements.html">Training requirements</a>
+    <a href="introduction.html">Introduction</a>
 </body>
 </html>
