--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <dt>Fresh practice to make CSS more easier</dt>
 
 <dd>SASS, CSS3 animations, snippets, Responsive design and other...<a href="presentation-fresh-practice-to-make-css-more-easier.html">View</a></dd>
+
+<dt>Plone Training</dt>
+
+<dd><a href="training/index.html">View</a></dd>
+
 </dl>
 
 </body>
