--- a/training/introduction.html
+++ b/training/introduction.html
@@ -35,7 +35,7 @@
         </div>
         <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
             <span class="try">start on</span>
-            <h1>http://localhost:8080<sup>*</sup></h1>
+            <strong>http://localhost:8080<sup>*</sup></strong>
             <span class="footnote"><sup>*</sup>start you instance on another port</span>
         </div>
         <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
