--- a/training/introduction.html
+++ b/training/introduction.html
@@ -34,8 +34,8 @@
             <q>Instalation and start</q>
         </div>
         <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-            <span class="try">start on <strong>http://localhost:8080<sup>*</sup></strong></span>
-            <p class="footnote"><sup>*</sup>start you instance on another port</p>
+            <span>start on <strong>http://localhost:8080<sup>*</sup></strong></span>
+            <p><sup>*</sup>start you instance on another port</p>
         </div>
         <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
             <p><b>Plone is content managment system (CMS)</b>make it as simple as you can</p>
