--- a/presentation-fresh-practice-to-make-css-more-easier.html
+++ b/presentation-fresh-practice-to-make-css-more-easier.html
@@ -298,5 +298,15 @@ if ("ontouchstart" in document.documentElement) {
 </script>
 <script src="http://netdna.impressjscdn.com/impressjs/0.5.3/js/impress.js"></script>
 <script>impress().init();</script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47638685-1', 'girman.in.ua');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
