--- a/training/index.html
+++ b/training/index.html
@@ -2,5 +2,15 @@
 <body>
     <a href="requirements.html">Training requirements</a>
     <a href="introduction.html">Introduction</a>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-47638685-1', 'girman.in.ua');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
